tgpatcher: Add Button toggle to enable Anti-Del Mode

--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -75,15 +75,6 @@ jobs:
           java -jar apktool.jar d Telegram.apk -f
           rm -rf Telegram/lib/x86*
 
-      - name: Apply Normal Patches
-        if: env.new_version_available == 'true'
-        run: |
-          echo "Applying Normal Patches..."
-          python3 tgpatcher.py --normal --dir Telegram/
-          echo "Patches applied, building apk..."
-          java -jar apktool.jar b Telegram/ -o Telegram_Patched.apk
-          echo "NOTE: apk may not be signed, you may need to sign it manually."
-
       - name: Apply Anti+Normal Patches
         if: env.new_version_available == 'true'
         run: |
@@ -98,52 +89,18 @@ jobs:
       - name: ZipAlign APks
         if: env.new_version_available == 'true'
         run: |
-          zipalign -p -f 4 Telegram_Patched.apk Telegram_Patched_aligned.apk
-          rm Telegram_Patched.apk
           zipalign -p -f 4 Telegram_Anti_Patched.apk Telegram_Anti_Patched_aligned.apk
           rm Telegram_Anti_Patched.apk
 
       - name: Sign APks
         if: env.new_version_available == 'true'
         run: |
-          java -jar keystore/apksigner.jar sign --in Telegram_Patched_aligned.apk --out Telegram_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
-          rm Telegram_Patched_aligned.apk
-          java -jar keystore/apksigner.jar sign --in Telegram_Anti_Patched_aligned.apk --out Telegram_Anti_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
+          java -jar keystore/apksigner.jar sign --in Telegram_Anti_Patched_aligned.apk --out Telegram_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
           rm Telegram_Anti_Patched_aligned.apk
 
       - name: Install upload requirements
         if: env.new_version_available == 'true'
         run: pip install pyrofork tgcrypto
-
-      - name: Send Normal APK to Telegram
-        if: env.new_version_available == 'true'
-        run: |
-          export BOT_TOKEN=${{ secrets.BOT_TOKEN }}
-          export API_ID=${{ secrets.API_ID }}
-          export API_HASH=${{ secrets.API_HASH }}
-          python3 tgupload.py Telegram_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
-          **Telegram [ Premium ] [ Local+ ] [ Direct ] [ Normal ]**
-          **Version :** ${{ env.version }}
-          **Architecture :** Arm + Arm64
-          
-          **Requirements:** Android 6.0 and up
-          **Overview:**
-          Telegram is a messaging app with a focus on speed and security.
-          
-          **❏Changelogs:**
-          ● See [Full Changelogs](https://telegra.ph/Telegram-premium-08-16-5)
-          
-          - **Released by [ Abhi ]**
-          
-          👉 **How to Save/Forward from copyrighted channels:** [Watch Here](https://youtu.be/TIlxcnzC-mM)
-          
-          **NOTE:**
-            - If you're **facing issue during login** like internal error, not getting OTP then **download Telegram X** from play store -> Login in it -> come back and login to mod
-            - Adding stories functionality gets unlocked with premium mod, but
-              - If you still didn't get the story feature, [read more about it here](http://tginfo.me/stories-by-countries)
-          
-          EOF
-          )"
 
       - name: Send Anti APK to Telegram
         if: env.new_version_available == 'true'
@@ -151,8 +108,8 @@ jobs:
           export BOT_TOKEN=${{ secrets.BOT_TOKEN }}
           export API_ID=${{ secrets.API_ID }}
           export API_HASH=${{ secrets.API_HASH }}
-          python3 tgupload.py Telegram_Anti_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
-          **Telegram [ Premium ] [ Local+ ] [ Direct ] [ Anti ]**
+          python3 tgupload.py Telegram_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
+          **Telegram [ Premium ] [ Local+ ] [ Direct ] [ Normal + Anti ]**
           **Version :** ${{ env.version }}
           **Architecture :** Arm + Arm64
           
@@ -162,6 +119,8 @@ jobs:
           
           **❏Changelogs:**
           ● See [Full Changelogs](https://telegra.ph/Telegram-premium-08-16-5)
+          - [New] Anti-Del Mode: Button toggle to enable Anti-Del Mode
+              - Can be found in Settings -> Telegram Business -> Anti-Del Mode
           
           - **Released by [ Abhi ]**
           
